- Добавлено CourierBugfix.dll для исправления ошибок при работе курьером, защите от подобных проблем   * Исправлено клонирование CondTrigger в DataHandler.GetCondTrigger   * Исправлена логика включения задания в GigManager.TurnInJob - Исправлено отображение текста в некоторых подсказках

--- a/BepInEx/Translation/ru/Text/_AutoGeneratedTranslations.txt
+++ b/BepInEx/Translation/ru/Text/_AutoGeneratedTranslations.txt
@@ -637,7 +637,7 @@ CT Name:=CT Название:
 New:=Новое:
 DOCK\nSYS\nENGAGE=ДОК\nСИС\nЗАХВАТА
 POINTS LEFT 2=ОСТАЛОСЬ ОЧКОВ: 2
-Reg. No.=Рег. №
+Reg. No.=Рег. #
 - is physically weak.\n- is easier to injure.\n- is easily winded.\n- has a slower than normal metabolism.\n- has a lower volume of blood circulating in the body.\n- has a weaker immune system.\n- has visual impairment.\n- has trouble sleeping.\n- grew up in a low-g vessel.\n- can choose to speak English.\n- can choose to speak Mandarin.\n- can choose additional skill.=- физически слаб.\n- легче получить травму.\n- легко устаёт от нагрузки.\n- обмен веществ медленнее, чем обычно.\n- в организме циркулирует меньшее количество крови.\n- более слабая иммунная система.\n- нарушения зрения.\n- проблемы со сном.\n- вырос в среде с низкой гравитацией.\n- может говорить по-английски.\n- может говорить на мандаринском.\n- доступен дополнительный навык.
 User is able to notice details better than most.=Пользователь способен замечать детали лучше, чем большинство.
 SELECTION INFO:=ИНФОРМАЦИЯ О ВЫБОРЕ:
@@ -710,7 +710,7 @@ Contents:=Содержимое:
 Distance:=Расстояние:
 Last Visited:=Последний визит:
 Location:=Местоположение:
-RegNr:=Рег. №:
+RegNr:=Рег. #:
 Rooms:=Отсеки:
 Room Specialization:=Назначение отсека:
 Prepay Mortgage=Погашение
@@ -928,7 +928,7 @@ Density: 193=Плотность: 193
 Steps:\n1. Create the final ship design first \n2. Save\n3. Remove parts\n4. Save a stage\n\n- Clicking the preview image loads the stage\n- Saving a stage saves the entire ship as well\n=Шаги:\n1. Сначала создайте окончательный дизайн корабля \n2. Сохраните\n3. Удалите части\n4. Сохранение этапа\n\n- Щелчок по изображению предварительного просмотра загружает этап\n- Сохранение этапа сохраняет и весь корабль\n
 jadi jada jadi jada jadi jada jadi jada  jadi jada jadi jada  jadi jada jadi jada jadi jada jadi jada  jadi jada jadi jada jadi jada jadi jada jadi jada jadi jada jadi jada jadi jada jadi jada jadi jada jadi jada jadi jada jadi jada jadi jada jadi jada jadi jada =джади джада джади джада джади джада джади джада джади джада джади джада джади джада джади джада джади джада джади джади джада джади джади джада джади джади джади джади джади джади джади джади джади джади джади джади джади джади джади джади джади джади джади джади джади джади джади джади джади джади джади джади джади джади джади джади джади джади джади джади джади джади джади джади джади джади джади джади джади джади джади джади джади 
 Drag:\n1234=Перетаскивание:\n1234
-LA Construction Zone #1=Строительная зона Лос-Анджелеса №1
+LA Construction Zone #1=Строительная зона Лос-Анджелеса #1
 requirements\n=требования\n
 FUEL WILL\nDEPLETE=ТОПЛИВО\nСГОРИТ
 Grav: 193=Грав: 193
