fix: repair tooltip {Is ...} template replacement
- Fixed {Is Condition1, и Condition2.} showing raw in repair tooltips
- Added 8 specific compound material patterns to rus_phrases.json
  (Алюминиевый лом, Лом углеволокна, Стальной лом, etc.)
- Added generic {Is } and .} cleanup for all remaining conditions
- Fixed sr: regex in _AutoGeneratedTranslations.txt (proper escaping)
- Root cause: XUnity sr: patterns auto-add ^$ anchors, can't match substrings
  DLL substring replacement via rus_phrases.json is the correct approach

--- a/BepInEx/Translation/ru/Text/_AutoGeneratedTranslations.txt
+++ b/BepInEx/Translation/ru/Text/_AutoGeneratedTranslations.txt
@@ -37,7 +37,7 @@ sr:"^BRG: (?<d0_i>\d[\d\.,-]*)\nVCRS: (?<d1_i>\d[\d\.,-]*)Km/s$"=BRG: ${d0_i}\nV
 <b>We can't be:=<b>Невозможно при:
 <b>We need:=<b>Требуется:
 <b>Effects:=<b>Эффекты:
-sr:"^{Is (.*)}$"={$1}
+sr:"^\{Is (?<name>[^.}]+)\.?\}$"=${name}
 Factions: n/a=Фракции: нет
 NONE=НЕТ
 TEMP=ТЕМП.
