fix: revert manpages/guipropmaps to English keys — fix manual books showing empty binder
Root cause: save game items have strManual='Nav Console'/'Environmental'/'Fusion'
(English, baked from vanilla ship definitions), but mod had translated manpages
labels to Russian. GUIMultiSheet couldn't match strManual against translated
labels → lookup failed → no pages rendered.

Fix: revert aValues labels in manpages.json and strManual in guipropmaps.json
back to English originals. Add XUnity translations for tab display labels.

--- a/BepInEx/Translation/ru/Text/_AutoGeneratedTranslations.txt
+++ b/BepInEx/Translation/ru/Text/_AutoGeneratedTranslations.txt
@@ -4074,3 +4074,12 @@ to see hotkeys and nearby interactable objects.=чтобы увидеть гор
 ' and then the DEFAULT button to hide wear & damage overlay again.=', затем кнопку DEFAULT, чтобы скрыть отображение износа и повреждений.
 Toggle "Match Speed" (=Включите "Выравнивание скорости" (
 ) on to automatically match your targets speed and rotation.=), чтобы автоматически подстроить скорость и вращение под цель.
+
+// Manual tab labels
+Basics=Основы
+Work Safety=Безопасность труда
+Hull Patch=Заплатка корпуса
+Nav Console=Навигационная консоль
+Environmental=Окружающая среда
+Fusion=Термояд
+Cont'd=Продолжение
